# bottleneck_transmission

./: .gitignore  README.md  linal.py  nonlinearity.ipynb  playground.ipynb  playground.py  prospective.ipynb  pyproject.toml
impls/: fountain.py  fullrank_matrix.py  matrix.py  zero_log2.py
src/: benchmark.ipynb  benchmark.py  benchmark_utils.py  main.ipynb  test_anfext.py
src/docs/: _interface.md  chain.md  comments.txt
src/impls/: _chain.py  _chain_2n_1.py  _chain_r.py  _chain_r2.py  _conversions.py  _gf.py  _interface.py  _systematic.py  _utils.py  anfext.py  anfext2.py  anfext2_undegenerate.py  anfext2_undergenerate.md  anfext2l.py  anfext2l_undegenerate.py  anfext2l_undergenerate.md  anfext2lr.py  anfext_fullrank.py  anfext_fullrank2.py  anfext_fullrank2l.py  chain.py  chain2.py  chain3.py  chain_2n.py  chain_2n_1.py  chain_2nm1.py  chain_dl.py  chain_dl2.py  chain_r.py  chain_r2.py  chainh.py  chainl.py  lt.py  raptor.py  shuffled_binary_fullrank.py  shuffled_binary_matrix.py  simple_matrix.py  single_binary_fullrank.py  single_binary_fullrank2.py  single_binary_matrix.py  (+3 more)
src/impls/_utils/: algo.py  conversions.py  gf2n.py  gf2n_1.py  intmath.py
src/impls/_utils/fields/: gf2n.py  gf2nm1.py
src/research/: lt_vs_anfext2l_results.jsonl  prospective.ipynb
