[project]
name = "bottleneck-transmission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.8",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "networkx>=3.4.2",
    "numba>=0.63.1",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
